Complete the basic structure

--- a/index.html
+++ b/index.html
@@ -2,25 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Microver Project</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+      <div class="container">
+        <div class="img-container">
+          <img class="img" src="./assets/image-qr-code.png" alt="QR-code-png"/>
+        </div>
+        <h1>Improve your front-end skills by building projects</h1>
+        <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
     <script  src="js/index.js"></script>
   </body>
 </html>
